--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@aptos-labs/wallet-adapter-ant-design": "^4.1.0",
     "@aptos-labs/wallet-adapter-react": "^6.1.2",
     "@aptos-labs/wallet-standard": "^0.5.0",
+    "@pinata/sdk": "^2.1.0",
     "@wallet-standard/core": "^1.1.1",
     "antd": "^5.26.1",
     "aptos": "^1.21.0",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "firebase": "^11.9.1",
+    "multer": "^2.0.1",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
