--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "firebase": "^11.9.1",
+    "form-data": "^4.0.3",
     "formidable": "^3.5.4",
     "multer": "^2.0.1",
+    "multiparty": "^4.2.3",
     "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
