--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^13.4.0",
     "form-data": "^4.0.3",
     "formidable": "^3.5.4",
     "multer": "^2.0.1",
